tests/ui/async-await/pin-needed-to-poll-2.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> $DIR/pin-needed-to-poll-2.rs:43:18
   |
LL |         Pin::new(&mut self.sleep).poll(cx)
   |         -------- ^^^^^^^^^^^^^^^ within `Sleep`, the trait `Unpin` is not implemented for `PhantomPinned`
   |         |
   |         required by a bound introduced by this call
   |
   = note: consider using `core::pin::pin!`
           consider using `Box::pin` if you want ownership of the pinned value
note: required because it appears within the type `Sleep`
  --> $DIR/pin-needed-to-poll-2.rs:8:8
   |
LL | struct Sleep(std::marker::PhantomPinned);
   |        ^^^^^
note: required by a bound in `Pin::<P>::new`
  --> $SRC_DIR/core/src/pin.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
